APIs found and setup.

--- a/index.html
+++ b/index.html
@@ -53,15 +53,32 @@
         <div class="col-8 ">
           <div class="row">
             <!-- Put the city summary here-->
-            <h5>Current Weather</h5>
-            <p id="citytext"></p>
-            <p id="citylocation"></p>
-            <p id="temperature"></p>
-            <p id="humidity"></p>
-            <p id="wind"></p>
-            <p id="uv"></p>
+           <h5>Current Weather</h5>
           </div>
 
+           <div class=" row today">
+              <p id="citytext"></p>
+           </div>
+
+           <div class="row today">
+              <p id="citylocation"></p>
+            </div>
+
+            <div class="row today">
+              <p id="temperature"></p>
+            </div>
+            
+            <div class="row today">
+              <p id="humidity"></p>
+            </div>
+
+            <div class="row today">
+              <p id="wind"></p>
+            </div>
+
+            <div class="row today">
+              <p id="uv"></p>
+            </div>
   
 
           <div class="row">
@@ -75,6 +92,7 @@
   </main>
 
   <!-- Include the JavaScript file -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   <script src="./assets/js/script.js"></script>
 </body>
 
