Accessing weather API correctly.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="col-4 ">
           <!-- Create the page area for the 'city search' and 'city history' -->
           <div class="card">
-            <h5 class="card-header text-uppercase">Search for a City<br>
+            <h5 class="card-header">Search for a City<br>
               <span class="h7">(Use: city, state, country)</span>
             </h5>
   
@@ -43,7 +43,7 @@
   
           <!-- Setup the 'city history' area -->
           <div class="card">
-            <h6 class="card-header text-uppercase">Previous City Searches</h6>
+            <h6 class="card-header">Previous City Searches</h6>
           </div>
         </div>
   
@@ -56,12 +56,12 @@
            <h5>Current Weather</h5>
           </div>
 
-           <div class=" row today">
-              <p id="citytext"></p>
+           <div class=" row today local1">
+              <p class="local1" id="citytext"></p>
            </div>
 
-           <div class="row today">
-              <p id="citylocation"></p>
+           <div class="row today local2">
+              <p class="local2" id="citylocation"></p>
             </div>
 
             <div class="row today">
