Have current day's forecaset.

--- a/index.html
+++ b/index.html
@@ -65,19 +65,19 @@
             </div>
 
             <div class="row today">
-              <p id="temperature"></p>
+              <p class="local3" id="temperature"></p>
             </div>
             
             <div class="row today">
-              <p id="humidity"></p>
+              <p class="local3" id="humidity"></p>
             </div>
 
             <div class="row today">
-              <p id="wind"></p>
+              <p class="local3" id="wind"></p>
             </div>
 
             <div class="row today">
-              <p id="uv"></p>
+              <p class="local3" id="uv"></p>
             </div>
   
 
