Finished acquiring today's forecast

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="col-8 ">
           <div class="row">
             <!-- Put the city summary here-->
-           <h5>Current Weather</h5>
+           <h5 class="currentday">Current Weather</h5>
           </div>
 
            <div class=" row today local1">
@@ -78,6 +78,7 @@
 
             <div class="row today">
               <p class="local3" id="uv"></p>
+              <p class="local3 redwhite" id="uv-value"></p>
             </div>
   
 
