Attempting latitude/longitude.

--- a/index.html
+++ b/index.html
@@ -42,8 +42,40 @@
           </div>
   
           <!-- Setup the 'city history' area -->
-          <div class="card">
-            <h6 class="card-header">Previous City Searches</h6>
+          <div class="card row">
+            <h5 class="card-header">Previous City Searches</h5>
+          </div>
+
+          <!-- Space for up to 10 cities -->
+          <div class="row">
+            <p class="previous" id="0" >Sample City 1</p>
+          </div>
+          <div class="row">
+            <p class="previous" id="1" >Sample City 2</p>
+          </div>
+          <div class="row">
+            <p class="previous" id="2" ></p>
+          </div>
+          <div class="row">
+            <p class="previous" id="3" ></p>
+          </div>
+          <div class="row">
+            <p class="previous" id="4" ></p>
+          </div>
+          <div class="row">
+            <p class="previous" id="5" ></p>
+          </div>
+          <div class="row">
+            <p class="previous" id="6" ></p>
+          </div>
+          <div class="row">
+            <p class="previous" id="7" ></p>
+          </div>
+          <div class="row">
+            <p class="previous" id="8" ></p>
+          </div>
+          <div class="row">
+            <p class="previous" id="9" ></p>
           </div>
         </div>
   
