Working on daily weather cards

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </div>
   
   
-        <!-- Setup the area where we display the weather information -->
+        <!-- Setup the area where we display the weather information for the current day. -->
   
         <div class="col-8 ">
           <div class="row">
@@ -114,9 +114,32 @@
             </div>
   
 
+          <!-- Setup the area for the next 5 days weather -->
           <div class="row">
             <!-- Area for the 5-day forecast here-->
             <h5 class="forecast">5-Day Forecast:</h5>
+          </div>
+
+          <div class="row">
+            <div class="container">
+              <div class="row">
+                <div class="col-2 mr-1 card daycard">
+                  <ul id="day1"></ul>
+                </div>
+                <div class="col-2 mr-1 card daycard">
+                  <ul id="day2"></ul>
+                </div>
+                <div class="col-2 mr-1 card daycard">
+                  <ul id="day3"></ul>
+                </div>
+                <div class="col-2 mr-1 card daycard">
+                  <ul id="day4"></ul>
+                </div>
+                <div class="col-2 mr-1 card daycard">
+                  <ul id="day5"></ul>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
