Resized bootstrap container

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 
 
   <main class="flex-row justify-space-between">
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
-        <div class="col-4 ">
+        <div class="col-3 ">
           <!-- Create the page area for the 'city search' and 'city history' -->
           <div class="card">
             <h5 class="card-header">Search for a City<br>
@@ -82,7 +82,7 @@
   
         <!-- Setup the area where we display the weather information for the current day. -->
   
-        <div class="col-8 ">
+        <div class="col-9 ">
           <div class="row">
             <!-- Put the city summary here-->
            <h5 class="currentday">Current Weather</h5>
