Initial work on saving/retrieving city list

--- a/index.html
+++ b/index.html
@@ -48,34 +48,34 @@
 
           <!-- Space for up to 10 cities -->
           <div class="row">
-            <p class="previous" id="0" >Sample City 1</p>
+            <p class="previous btn" id="p0" >Sample City 1</p>
           </div>
           <div class="row">
-            <p class="previous" id="1" >Sample City 2</p>
+            <p class="previous btn" id="p1" >Sample City 2</p>
           </div>
           <div class="row">
-            <p class="previous" id="2" ></p>
+            <p class="previous btn" id="p2" ></p>
           </div>
           <div class="row">
-            <p class="previous" id="3" ></p>
+            <p class="previous btn" id="p3" ></p>
           </div>
           <div class="row">
-            <p class="previous" id="4" ></p>
+            <p class="previous btn" id="p4" ></p>
           </div>
           <div class="row">
-            <p class="previous" id="5" ></p>
+            <p class="previous btn" id="p5" ></p>
           </div>
           <div class="row">
-            <p class="previous" id="6" ></p>
+            <p class="previous btn" id="p6" ></p>
           </div>
           <div class="row">
-            <p class="previous" id="7" ></p>
+            <p class="previous btn" id="p7" ></p>
           </div>
           <div class="row">
-            <p class="previous" id="8" ></p>
+            <p class="previous btn" id="p8" ></p>
           </div>
           <div class="row">
-            <p class="previous" id="9" ></p>
+            <p class="previous btn" id="p9" ></p>
           </div>
         </div>
   
