Updating 'push' function

--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
 
           <!-- Space for up to 10 cities -->
           <div class="row">
-            <p class="previous btn" id="p0" >Sample City 1</p>
+            <p class="previous btn" id="p0" ></p>
           </div>
           <div class="row">
-            <p class="previous btn" id="p1" >Sample City 2</p>
+            <p class="previous btn" id="p1" ></p>
           </div>
           <div class="row">
             <p class="previous btn" id="p2" ></p>
