City stack redisplay working.

--- a/index.html
+++ b/index.html
@@ -46,36 +46,38 @@
             <h5 class="card-header">Previous City Searches</h5>
           </div>
 
-          <!-- Space for up to 10 cities -->
-          <div class="row">
-            <p class="previous btn" id="p0" ></p>
-          </div>
-          <div class="row">
-            <p class="previous btn" id="p1" ></p>
-          </div>
-          <div class="row">
-            <p class="previous btn" id="p2" ></p>
-          </div>
-          <div class="row">
-            <p class="previous btn" id="p3" ></p>
-          </div>
-          <div class="row">
-            <p class="previous btn" id="p4" ></p>
-          </div>
-          <div class="row">
-            <p class="previous btn" id="p5" ></p>
-          </div>
-          <div class="row">
-            <p class="previous btn" id="p6" ></p>
-          </div>
-          <div class="row">
-            <p class="previous btn" id="p7" ></p>
-          </div>
-          <div class="row">
-            <p class="previous btn" id="p8" ></p>
-          </div>
-          <div class="row">
-            <p class="previous btn" id="p9" ></p>
+          <div id="previous-cities">
+            <!-- Space for up to 10 cities -->
+            <div class="row">
+              <p class="previous btn" id="p0"></p>
+            </div>
+            <div class="row">
+              <p class="previous btn" id="p1"></p>
+            </div>
+            <div class="row">
+              <p class="previous btn" id="p2"></p>
+            </div>
+            <div class="row">
+              <p class="previous btn" id="p3"></p>
+            </div>
+            <div class="row">
+              <p class="previous btn" id="p4"></p>
+            </div>
+            <div class="row">
+              <p class="previous btn" id="p5"></p>
+            </div>
+            <div class="row">
+              <p class="previous btn" id="p6"></p>
+            </div>
+            <div class="row">
+              <p class="previous btn" id="p7"></p>
+            </div>
+            <div class="row">
+              <p class="previous btn" id="p8"></p>
+            </div>
+            <div class="row">
+              <p class="previous btn" id="p9"></p>
+            </div>
           </div>
         </div>
   
