media query working for smaller screen sizes

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
           </div>
 
           <div class="row ">
-            <div class="container ">
+            <div class="container next5Days">
               <div class="row day-panels">
                 <div class="col-md-2 mr-1 card daycard">
                   <ul id="day1"></ul>
