Clear button/function added for local storage

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
           <div class="card row">
             <h5 class="card-header">Previous City Searches<br>
             <span class="h7">(Up to ten cities can be saved.)</span>
+            <button type="button" class="btn btn-primary" id="clear-all"> Clear </button>
           </h5>
           </div>
 
