Tweaked error handling, icon appearance, and updated 'readme.md'.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <!-- Create the page area for the 'city search' and 'city history' -->
           <div class="card">
             <h5 class="card-header">Search for a City<br>
-              <span class="h7">(Use: city or city, state, country)</span>
+              <span class="h7">(Use: 'city' or 'city, state', or 'city,state,country'. For 'city,state', type out the full state name.)</span>
             </h5>
   
             <form id="city-form" class="card-body">
@@ -45,7 +45,9 @@
           <div class="card row">
             <h5 class="card-header">Previous City Searches<br>
             <span class="h7">(Up to ten cities can be saved.)</span>
-            <button type="button" class="btn btn-primary" id="clear-all"> Clear </button>
+            <button type="button" class="btn btn-primary" id="clear-all"> Clear 
+              <span><img src="./assets/images/eraser.png" height="25"></img></span>
+            </button>
           </h5>
           </div>
 
