--- a/index.html
+++ b/index.html
@@ -16,148 +16,155 @@
 </head>
 
 <body class="flex-column min-100-vh">
-  <header class="hero">
-    <h1 class="app-title">Weather Dashboard
-      <img src="./assets/images/weather1.png" height="40" alt="weather icon"></img>
-    </h1>
-  </header>
-
-
-  <main class="flex-row justify-space-between">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-3 city-input">
-          <!-- Create the page area for the 'city search' and 'city history' -->
-          <div class="card">
-            <h5 class="card-header">Search for a City<br>
-              <span class="h7">(Use: 'city' or 'city, state', or 'city,state,country'. For 'city,state', type out the full state name.)</span>
-            </h5>
+  <div class="wrapper">         <!-- Wrapper to keep footer at the bottom -->
+    <header class="hero">
+      <h1 class="app-title">Weather Dashboard
+        <img src="./assets/images/weather1.png" height="40" alt="weather icon"></img>
+      </h1>
+    </header>
   
-            <form id="city-form" class="card-body">
-              <input name="cityname" id="cityname" type="text" autofocus="true" class="form-input" 
-                     placeholder="City, State, Country"/>
-              <button type="submit" class="btn">
-                <img src="./assets/images/search.png" height="35"></img>
-              </button>
-            </form>
+  
+    <main class="flex-row justify-space-between">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-3 city-input">
+            <!-- Create the page area for the 'city search' and 'city history' -->
+            <div class="card">
+              <h5 class="card-header">Search for a City<br>
+                <span class="h7">(Use: 'city' or 'city, state', or 'city,state,country'. For 'city,state', type out the
+                  full state name.)</span>
+              </h5>
+  
+              <form id="city-form" class="card-body">
+                <input name="cityname" id="cityname" type="text" autofocus="true" class="form-input"
+                  placeholder="City, State, Country" />
+                <button type="submit" class="btn">
+                  <img src="./assets/images/search.png" height="35"></img>
+                </button>
+              </form>
+            </div>
+  
+            <!-- Setup the 'city history' area -->
+            <div class="card ">
+              <h5 class="card-header">Previous City Searches<br>
+                <span class="h7">(Up to ten cities can be saved.)</span>
+                <button type="button" class="btn btn-primary" id="clear-all"> Clear
+                  <span><img src="./assets/images/eraser.png" height="25"></img></span>
+                </button>
+              </h5>
+            </div>
+  
+            <div id="previous-cities">
+              <!-- Space for up to 10 cities -->
+              <div class="row">
+                <p class="previous btn btn-primary" id="p0"></p>
+              </div>
+              <div class="row">
+                <p class="previous btn btn-primary" id="p1"></p>
+              </div>
+              <div class="row">
+                <p class="previous btn btn-primary" id="p2"></p>
+              </div>
+              <div class="row">
+                <p class="previous btn btn-primary" id="p3"></p>
+              </div>
+              <div class="row">
+                <p class="previous btn btn-primary" id="p4"></p>
+              </div>
+              <div class="row">
+                <p class="previous btn btn-primary" id="p5"></p>
+              </div>
+              <div class="row">
+                <p class="previous btn btn-primary" id="p6"></p>
+              </div>
+              <div class="row">
+                <p class="previous btn btn-primary" id="p7"></p>
+              </div>
+              <div class="row">
+                <p class="previous btn btn-primary" id="p8"></p>
+              </div>
+              <div class="row">
+                <p class="previous btn btn-primary" id="p9"></p>
+              </div>
+            </div>
           </div>
   
-          <!-- Setup the 'city history' area -->
-          <div class="card ">
-            <h5 class="card-header">Previous City Searches<br>
-            <span class="h7">(Up to ten cities can be saved.)</span>
-            <button type="button" class="btn btn-primary" id="clear-all"> Clear 
-              <span><img src="./assets/images/eraser.png" height="25"></img></span>
-            </button>
-          </h5>
-          </div>
-
-          <div id="previous-cities">
-            <!-- Space for up to 10 cities -->
-            <div class="row">
-              <p class="previous btn btn-primary" id="p0"></p>
-            </div>
-            <div class="row">
-              <p class="previous btn btn-primary" id="p1"></p>
-            </div>
-            <div class="row">
-              <p class="previous btn btn-primary" id="p2"></p>
-            </div>
-            <div class="row">
-              <p class="previous btn btn-primary" id="p3"></p>
-            </div>
-            <div class="row">
-              <p class="previous btn btn-primary" id="p4"></p>
-            </div>
-            <div class="row">
-              <p class="previous btn btn-primary" id="p5"></p>
-            </div>
-            <div class="row">
-              <p class="previous btn btn-primary" id="p6"></p>
-            </div>
-            <div class="row">
-              <p class="previous btn btn-primary" id="p7"></p>
-            </div>
-            <div class="row">
-              <p class="previous btn btn-primary" id="p8"></p>
-            </div>
-            <div class="row">
-              <p class="previous btn btn-primary" id="p9"></p>
-            </div>
-          </div>
-        </div>
   
+          <!-- Setup the area where we display the weather information for the current day. -->
   
-        <!-- Setup the area where we display the weather information for the current day. -->
+          <div class="col-9 ">
+            <div class="row">
+              <!-- Put the city summary here-->
+              <h5 class="currentday">Current Weather</h5>
+            </div>
   
-        <div class="col-9 ">
-          <div class="row">
-            <!-- Put the city summary here-->
-           <h5 class="currentday">Current Weather</h5>
-          </div>
-
-           <div class=" row today local1">
+            <div class=" row today local1">
               <p class="local1" id="citytext"></p>
-           </div>
-
-           <div class="row today local2">
+            </div>
+  
+            <div class="row today local2">
               <p class="local2" id="citylocation"></p>
             </div>
-
+  
             <div class="row today">
               <p class="local3" id="temperature"></p>
             </div>
-            
+  
             <div class="row today">
               <p class="local3" id="feelslike"></p>
             </div>
-            
+  
             <div class="row today">
               <p class="local3" id="humidity"></p>
             </div>
-
+  
             <div class="row today">
               <p class="local3" id="wind"></p>
             </div>
-
+  
             <div class="row today">
               <p class="local3" id="uv"></p>
               <p class="local3 redwhite" id="uv-value"></p>
             </div>
   
-
-          <!-- Setup the weather area for the next 5 days -->
-          <div class="row">
-            <!-- Area for the 5-day forecast here-->
-            <h5 class="forecast">5-Day Forecast (at 9am & noon):</h5>
-          </div>
-
-          <div class="row ">
-            <div class="container next5Days">
-              <div class="row day-panels">
-                <div class="col-md-2 mr-1 card daycard">
-                  <ul id="day1"></ul>
-                </div>
-                <div class="col-md-2 mr-1 card daycard">
-                  <ul id="day2"></ul>
-                </div>
-                <div class="col-md-2 mr-1 card daycard">
-                  <ul id="day3"></ul>
-                </div>
-                <div class="col-md-2 mr-1 card daycard">
-                  <ul id="day4"></ul>
-                </div>
-                <div class="col-md-2 mr-1 card daycard">
-                  <ul id="day5"></ul>
+  
+            <!-- Setup the weather area for the next 5 days -->
+            <div class="row">
+              <!-- Area for the 5-day forecast here-->
+              <h5 class="forecast">5-Day Forecast (at 9am & noon):</h5>
+            </div>
+  
+            <div class="row ">
+              <div class="container next5Days">
+                <div class="row day-panels">
+                  <div class="col-md-2 mr-1 card daycard">
+                    <ul id="day1"></ul>
+                  </div>
+                  <div class="col-md-2 mr-1 card daycard">
+                    <ul id="day2"></ul>
+                  </div>
+                  <div class="col-md-2 mr-1 card daycard">
+                    <ul id="day3"></ul>
+                  </div>
+                  <div class="col-md-2 mr-1 card daycard">
+                    <ul id="day4"></ul>
+                  </div>
+                  <div class="col-md-2 mr-1 card daycard">
+                    <ul id="day5"></ul>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
   
-  </main>
+    </main>
+  </div>
+  <footer class="footer">
+    &copy;2022 by R. Ay
+  </footer>  
+  
 
   <!-- Include the JavaScript file -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
